# esp-self-reflasher

./: .gitignore  CMakeLists.txt  Kconfig  README.md  esp_self_reflasher.lf  idf_component.yml
.github/workflows/: upload_component.yml
examples/boot_swap_download_example/: CMakeLists.txt  README.md  boot_swap_download.lf  partitions.csv  sdkconfig.defaults
examples/boot_swap_download_example/main/: CMakeLists.txt  Kconfig.projbuild  boot_swap_download.c
examples/boot_swap_embedded_example/: CMakeLists.txt  README.md  boot_swap_embedded.lf  partitions.csv  sdkconfig.defaults
examples/boot_swap_embedded_example/main/: CMakeLists.txt  Kconfig.projbuild  boot_swap_embedded.c
examples/ota_reflash/: CMakeLists.txt  README.md  partitions.csv  sdkconfig.defaults
examples/ota_reflash/main/: CMakeLists.txt  Kconfig.projbuild  ota_reflash.c
include/: self_reflasher.h
src/: self_reflasher.c
